# mkdoc-translations

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
mkdocs_translations/: __init__.py  plugin.py
tests/: __init__.py  test_mkdocs_translations.py
